--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
       <version>2.4</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.5</version>
+    </dependency>
+    <dependency>
       <groupId>com.epam.indigo</groupId>
       <artifactId>indigo</artifactId>
       <version>1.2.3.r0</version>
